--- a/web/src/main/resources/org/geogebra/web/resources/war/applet.html
+++ b/web/src/main/resources/org/geogebra/web/resources/war/applet.html
@@ -90,6 +90,8 @@
 			"useBrowserForJS": ["boolean", true],
 			"screenshotGenerator": "boolean",
 			"prerelease": "boolean",
+			"useLocalizedDigits": "boolean",
+			"useLocalizedPointNames": "boolean",
 			"borderColor": ["text", "#D3D3D3"],
 			"capturingThreshold": "number",
 			"fitToScreen": "boolean",
